// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`items are created on startup 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/6",
        },
        "data": Object {
          "id": 6,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Profile",
      },
    ],
    "title": "Google",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/7",
        },
        "data": Object {
          "id": 7,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "method": "POST",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "https://api.googleapis.com/profile",
    "secondaryAction": undefined,
    "status": "200",
    "title": "Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts/123",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 1. Added 3 requests and 2 history entries 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/6",
        },
        "data": Object {
          "id": 6,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Profile",
      },
    ],
    "title": "Google",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "https://api.googleapis.com/profile",
    "secondaryAction": undefined,
    "status": "200",
    "title": "Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts/123",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 2. Deleted last request in collection 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "https://api.googleapis.com/profile",
    "secondaryAction": undefined,
    "status": "200",
    "title": "Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts/123",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 3. Updated 1 request and added 3 history entries 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "method": "POST",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "https://api.googleapis.com/profile",
    "secondaryAction": undefined,
    "status": "200",
    "title": "Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts/123",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 4. Added 6th history entry 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Create Post",
      },
      Item {
        "action": Object {
          "url": "#/request/1",
        },
        "data": Object {
          "id": 1,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Get Posts",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request//history/46",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "m",
    "secondaryAction": undefined,
    "status": "200",
    "title": "",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "method": "POST",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "https://api.googleapis.com/profile",
    "secondaryAction": undefined,
    "status": "200",
    "title": "Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts/123",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 5. Deleted 1 request 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Create Post",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request//history/46",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "m",
    "secondaryAction": undefined,
    "status": "200",
    "title": "",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "method": "POST",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "https://api.googleapis.com/profile",
    "secondaryAction": undefined,
    "status": "200",
    "title": "Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts/123",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Post",
  },
]
`;

exports[`with resolved empty data items are updated when data changes: 6. Updated environment name 1`] = `
Array [
  Subheader {
    "action": Object {
      "icon": "add",
      "url": "#/",
    },
    "isSubheader": true,
    "title": "Requests",
  },
  Group {
    "isGroup": true,
    "items": Array [
      Item {
        "action": Object {
          "url": "#/request/5",
        },
        "data": Object {
          "id": 5,
        },
        "isItem": true,
        "method": undefined,
        "requestURI": undefined,
        "secondaryAction": undefined,
        "status": undefined,
        "title": "Create Post",
      },
    ],
    "title": "JSONPlaceholder",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "settings",
      "url": "#/settings",
    },
    "isSubheader": true,
    "title": "Settings",
  },
  Item {
    "action": Object {
      "url": "#/environments",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": Object {
      "handler": [Function],
      "icon": "more-vert",
    },
    "status": undefined,
    "title": "Environment",
  },
  Item {
    "action": Object {
      "url": "#/organize",
    },
    "data": undefined,
    "isItem": true,
    "method": undefined,
    "requestURI": undefined,
    "secondaryAction": undefined,
    "status": undefined,
    "title": "Organize",
  },
  Divider {
    "isDivider": true,
  },
  Subheader {
    "action": Object {
      "icon": "history",
      "url": "#/history",
    },
    "isSubheader": true,
    "title": "History",
  },
  Item {
    "action": Object {
      "url": "#/request//history/46",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "m",
    "secondaryAction": undefined,
    "status": "200",
    "title": "",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/45",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/5/history/44",
    },
    "data": undefined,
    "isItem": true,
    "method": "POST",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Create Post",
  },
  Item {
    "action": Object {
      "url": "#/request/1/history/43",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Posts",
  },
  Item {
    "action": Object {
      "url": "#/request/6/history/42",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "https://api.googleapis.com/profile",
    "secondaryAction": undefined,
    "status": "200",
    "title": "Google / Get Profile",
  },
  Item {
    "action": Object {
      "url": "#/request/7/history/41",
    },
    "data": undefined,
    "isItem": true,
    "method": "GET",
    "requestURI": "http://jsonplaceholder.com/posts/123",
    "secondaryAction": undefined,
    "status": "200",
    "title": "JSONPlaceholder / Get Post",
  },
]
`;
